adjust views and controllers to Dapper

--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -1,78 +1,203 @@
-﻿@model IEnumerable<ZeiterfassungPierburg.Models.MitarbeiterInSchicht>
+﻿@model IEnumerable<ZeiterfassungPierburg.Models.ViewModel.MitarbeiterInschichtViewModel.MitarbeiterInschichtViewModel>
 
-<section class="content-header">
-    <h1>Übersicht der Mitarbeiter in Schichten</h1>
-</section>
 <section class="content container-fluid">
     <div class="box-header with-border">
         <div class="box box-info">
             <div class="box-header with-border">
-                <table class="table table-striped">
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.SchichtInfoID)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.MitarbeiterID)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Stück)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FertigungsteilID)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ProduktionsanlageID)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.DirStunden)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.InDirStunden)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
-                            </th>
-                            <th></th>
-                        </tr>
+                <h3>Übersicht der Mitarbeiter in Schichten</h3>
 
-                        @foreach (var item in Model)
-                        {
+                <div class="col-lg-12" style="padding-bottom: 25px;">
+                    <div class="col-md-2">
+                        <label>Einträge von:</label>
+                        <input class="form-control text-box single-line" id="min" name="Datum" type="date" value="2020-01-14">
+                        </div>
+                    <div class="mt-2 col-md-2">    
+                    <label>Einträge bis:</label>
+
+                        <input class="form-control text-box single-line" id="max" name="Datum" type="date" value="2020-01-18">
+                    </div>
+                </div>
+
+                    <table id="myTable" class="table table-striped table-bordered" style="width:100%">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SchichtInfoID)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MitarbeiterID)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Stück)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.FertigungsteilID)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ProduktionsanlageID)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.InDirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IstInSAPEingetragen)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                                </td>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Datum)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Art)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Anlage)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Personalnummer)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Kostenstelle)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.SAPAPNr)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.ZeichenNr)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Stück)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.DirStunden)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.InDirStunden)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Bemerkung)
+                                </th>
+                                <th></th>
                             </tr>
-                        }
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Datum)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Art)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Anlage)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Personalnummer)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Stück)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DirStunden)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.InDirStunden)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Bemerkung)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
                     </table>
+                    <button id="btnExport" class="pull-left btn btn-default" type="button" onclick="fnExcelReport();">EXPORT</button>
+
                     @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
-            </div>
+                </div>
         </div>
     </div>
 </section>
+<iframe id="txtArea1" style="display: none"></iframe>
+
+@section scripts{
+    @Styles.Render("~/bundles/tableStyleBundle")
+    @Scripts.Render("~/bundles/tableScriptBundle")
+
+
+    <script>
+        jQuery.fn.dataTableExt.afnFiltering.push(
+            function (oSettings, aData, iDataIndex) {
+                var iColumn = 0;
+                var iMin = document.getElementById('min').value * 1;
+                var iMax = document.getElementById('max').value * 1;
+                /*
+                var iMin = "12-Jan- 20";
+                var iMax = "16-Jan- 20";
+                */
+
+
+                var iVersion = aData[iColumn] == "-" ? 0 : aData[iColumn] * 1;
+                console.log(aData[iColumn]);
+
+                if (iMin === "" && iMax === "") {
+                    return true;
+                }
+                else if (iMin === "" && iVersion < iMax) {
+                    return true;
+                }
+                else if (iMin < iVersion && "" === iMax) {
+                    return true;
+                }
+                else if (iMin < iVersion && iVersion < iMax) {
+                    return true;
+                }
+                return false;
+            }
+        );
+
+
+
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+
+            $('#iFini ').keyup(function () { table.draw(); });
+            $('#iFfin ').keyup(function () { table.draw(); });
+        });
+
+        function fnExcelReport() {
+            var tab_text = "<table border='2px'><tr bgcolor='#87AFC6'>";
+            var textRange; var j = 0;
+            tab = document.getElementById('myTable'); // id of table
+
+            for (j = 0; j < tab.rows.length; j++) {
+                tab_text = tab_text + tab.rows[j].innerHTML + "</tr>";
+                //tab_text=tab_text+"</tr>";
+            }
+
+            tab_text = tab_text + "</table>";
+            tab_text = tab_text.replace(/<A[^>]*>|<\/A>/g, "");//remove if u want links in your table
+            tab_text = tab_text.replace(/<img[^>]*>/gi, ""); // remove if u want images in your table
+            tab_text = tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); // removes input params
+
+            var ua = window.navigator.userAgent;
+            var msie = ua.indexOf("MSIE ");
+
+            if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))      // If Internet Explorer
+            {
+                txtArea1.document.open("txt/html", "replace");
+                txtArea1.document.write(tab_text);
+                txtArea1.document.close();
+                txtArea1.focus();
+                sa = txtArea1.document.execCommand("SaveAs", true, "TabelleExport.xls");
+            }
+            else                 //other browser not tested on IE 11
+                sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));
+            return (sa);
+        }
+
+
+    </script>
+
+
+}
 
