--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
@@ -1,54 +1,75 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.Produktionsanlage>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Bezeichner)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.APNr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Kostenstelle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SAPAPNr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IstEineMaschine)
-        </th>
-        <th>
+<section class="content container-fluid">
+    <div class="box-header with-border">
+        <div class="box box-info">
+            <div class="box-header with-border">
+                <h3>Übersicht der Produktionsanlagen</h3>
+                <table id="example" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Bezeichner)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.APNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Kostenstelle)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.SAPAPNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.IstEineMaschine)
+                            </th>
+                            <th>
 
-        </th>
-    </tr>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bezeichner)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.APNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.IstEineMaschine)
+                                </td>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bezeichner)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.APNr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Kostenstelle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SAPAPNr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IstEineMaschine)
-        </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                                    @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { onclick = "return confirm('Are sure wants to delete?');" })
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+                <h4>@ViewBag.MitarbeiterMessage</h4>
+                @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+            </div>
+        </div>
+    </div>
+</section>
+@section scripts{
+    @Styles.Render("~/bundles/tableStyleBundle")
+    @Scripts.Render("~/bundles/tableScriptBundle")
 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { onclick = "return confirm('Are sure wants to delete?');" })
-        </td>
-    </tr>
-    }
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
 
-</table>
