--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
@@ -1,44 +1,45 @@
 ﻿@model ZeiterfassungPierburg.Models.Fertigungsteil
 
 <section class="content container-fluid">
-    <h3>Mitarbeiter*In hinzufügen</h3>
+    <h3>Fertigungsteil hinzufügen</h3>
 
     <div class="box box-info">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+        <div class="box-body">
+            <div class="form-horizontal">
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.ZeichenNr, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ZeichenNr, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ZeichenNr, "", new { @class = "text-danger" })
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.ZeichenNr, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.ZeichenNr, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.ZeichenNr, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Bezeichnung, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Bezeichnung, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Bezeichnung, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-8">
+                        <input type="submit" value="Hinzufügen" class="btn btn-default" />
+                    </div>
+                </div>
+                }
+
+                <div>
+                    @Html.ActionLink("Zurück zur Übersicht", "Index")
                 </div>
             </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Bezeichnung, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Bezeichnung, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Bezeichnung, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
-            </div>
-            <h3>@ViewBag.Message</h3>
-        }
-        <div>
-            @Html.ActionLink("Zurück zur Übersicht", "Index")
         </div>
-
-
     </div>
 </section>
 @section Scripts {
