--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -1,46 +1,59 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.Fertigungsteil>
 
-<section class="content-header">
-    <h1>Teile</h1>
-</section>
 <section class="content container-fluid">
     <div class="box-header with-border">
         <div class="box box-info">
             <div class="box-header with-border">
-                <table class="table table-striped">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ZeichenNr)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Bezeichnung)
-                        </th>
-
-                        <th>
-
-                        </th>
-                    </tr>
-
-                    @foreach (var item in Model)
-                    {
+                <h3>Übersicht der Teile</h3>
+                <table id="example" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ZeichenNr)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Bezeichnung)
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.ZeichenNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Bezeichnung)
+                            </th>
 
-                            <td>
-                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                            </td>
+                            <th>
+
+                            </th>
                         </tr>
-                    }
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bezeichnung)
+                                </td>
 
+                                <td>
+                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
                 </table>
+                <h4>@ViewBag.MitarbeiterMessage</h4>
                 @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
             </div>
         </div>
     </div>
 </section>
+@section scripts{
+    @Styles.Render("~/bundles/tableStyleBundle")
+    @Scripts.Render("~/bundles/tableScriptBundle")
+
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
+
