--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
@@ -61,17 +61,21 @@
                     </div>
                 </div>
 
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Beschäftigungsart, htmlAttributes: new { @class = "control-label col-md-2" })
+
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Beschäftigungsart, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.DropDownListFor(m => m.Beschäftigungsart, Model.BeschäftigungsartList,  new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Beschäftigungsart, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
+
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-8">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Hinzufügen" class="btn btn-default" />
                     </div>
                 </div>
             }
@@ -79,7 +83,7 @@
             <div>
                 @Html.ActionLink("Zurück zur Übersicht", "Index")
             </div>
-            </div>
+        </div>
         </div>
     </div>
 </section>
