--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Edit.cshtml
@@ -40,16 +40,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IstEineMaschine, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IstEineMaschine, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.CheckBoxFor(model => model.IstEineMaschine, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.IstEineMaschine, "", new { @class = "text-danger" })
             </div>
         </div>
 
-
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Speichern" class="btn btn-default" />
             </div>
         </div>
         <h3>@ViewBag.Message</h3>
@@ -57,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Zurück zur Übersicht", "Index")
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
