--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -9,111 +9,110 @@
                 <div class="col-lg-12" style="padding-bottom: 25px;">
                     <div class="col-md-2">
                         <label>Einträge von:</label>
-                        <input class="form-control text-box single-line" id="min" name="Datum" type="date" value="2020-01-14">
-                        </div>
-                    <div class="mt-2 col-md-2">    
-                    <label>Einträge bis:</label>
+                        <input class="form-control text-box single-line" id="min" name="Datum" type="date">
+                    </div>
+                    <div class="mt-2 col-md-2">
+                        <label>Einträge bis:</label>
 
-                        <input class="form-control text-box single-line" id="max" name="Datum" type="date" value="2020-01-18">
+                        <input class="form-control text-box single-line" id="max" name="Datum" type="date">
                     </div>
                 </div>
 
-                    <table id="myTable" class="table table-striped table-bordered" style="width:100%">
-                        <thead>
+                <table id="myTable" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Datum)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Art)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Anlage)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Personalnummer)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Kostenstelle)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.SAPAPNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.ZeichenNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Stück)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.DirStunden)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.InDirStunden)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Bemerkung)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Datum)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Art)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Anlage)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Personalnummer)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Kostenstelle)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.SAPAPNr)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.ZeichenNr)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Stück)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.DirStunden)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.InDirStunden)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Bemerkung)
-                                </th>
-                                <th></th>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Datum)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Art)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Anlage)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Personalnummer)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Stück)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.InDirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bemerkung)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                                </td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Datum)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Art)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Anlage)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Personalnummer)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Kostenstelle)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SAPAPNr)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.ZeichenNr)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Stück)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.DirStunden)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.InDirStunden)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Bemerkung)
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                    <button id="btnExport" class="pull-left btn btn-default" type="button" onclick="fnExcelReport();">EXPORT</button>
-
-                    @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
-                </div>
+                        }
+                    </tbody>
+                </table>
+                <img id="btnExport" class="pull-left btn btn-default" onclick="fnExcelReport();" src="~/Content/dist/img/excel_icon.png" />
+                @Html.ActionLink("Neue Zeiterfassung hinzufügen", "Create", null, new { @class = "pull-right btn btn-default", @type = "button", })
+            </div>
         </div>
     </div>
 </section>
@@ -125,44 +124,91 @@
 
 
     <script>
+        function addDays(date, days) {
+            var result = new Date(date);
+            result.setDate(result.getDate() + days);
+            return result;
+        }
+        /*
+        Date.prototype.toShortFormat = function () {
+
+            var month_names = ["Jan", "Feb", "Mar",
+                "Apr", "May", "Jun",
+                "Jul", "Aug", "Sep",
+                "Oct", "Nov", "Dec"];
+
+            var day = this.getDate();
+            var month_index = this.getMonth();
+            var year = this.getFullYear();
+
+            return "" + day + "-" + month_names[month_index] + "-" + year;
+        }
+        */
+
+        // Now any Date object can be declared 
+        var today = new Date();
+
+        /* Custom filtering function which will search data in column four between two values */
+
+        
+        
         jQuery.fn.dataTableExt.afnFiltering.push(
             function (oSettings, aData, iDataIndex) {
                 var iColumn = 0;
-                var iMin = document.getElementById('min').value * 1;
-                var iMax = document.getElementById('max').value * 1;
+                
+                // document.getElementById('min').value = today; //z.B. 'Thu Jan 16 2020 17:31:26 GMT+0100 (W. Europe Standard Time)'
+                //document.getElementById('max').value = today;
+                
+
+                var iMin = Date.parse(document.getElementById('min').value);
+                var iMax = Date.parse(document.getElementById('max').value);
+
+
+                var iVersion = (aData[iColumn] == "-" ? 0 : aData[iColumn]).substring(0, 9);
+                iVersion = Date.parse(iVersion);
+
+    
                 /*
-                var iMin = "12-Jan- 20";
-                var iMax = "16-Jan- 20";
-                */
-
-
-                var iVersion = aData[iColumn] == "-" ? 0 : aData[iColumn] * 1;
-                console.log(aData[iColumn]);
-
                 if (iMin === "" && iMax === "") {
                     return true;
                 }
-                else if (iMin === "" && iVersion < iMax) {
+                else if (iMin === "" && iVersion <= iMax) {
                     return true;
                 }
-                else if (iMin < iVersion && "" === iMax) {
+                else if (iMin <= iVersion && "" === iMax) {
                     return true;
                 }
-                else if (iMin < iVersion && iVersion < iMax) {
+                
+                if (iMin <= iVersion && iVersion <= iMax) {
                     return true;
                 }
                 return false;
+                */
+
+                if (iMin > addDays(iVersion, 1) || iVersion > iMax) {
+                    return false;
+                }
+                else return true;
             }
         );
-
-
+        
 
         $(document).ready(function () {
-            $('#myTable').DataTable();
 
-            $('#iFini ').keyup(function () { table.draw(); });
-            $('#iFfin ').keyup(function () { table.draw(); });
+            console.log(document.getElementById('min').value);
+            //document.getElementById('min').value = '15-Jan-2020';
+
+
+            var table = $('#myTable').DataTable();
+
+            $('#min, #max').change(function () {
+                table.draw();
+            });
+
+
+
         });
+
 
         function fnExcelReport() {
             var tab_text = "<table border='2px'><tr bgcolor='#87AFC6'>";
