--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -141,6 +141,7 @@
                         </div>
                         @Html.Label("", (string)ViewBag.Message)
                     </div>
+                    @Html.ActionLink("Zur Übersicht", "Index", "MitarbeiterInSchicht")
                 </div>
                 <!-- /.box -->
             </div>
@@ -148,9 +149,7 @@
     </section>
     <!-- /.content -->
 }
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
