--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -1,99 +1,249 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.ViewModel.MitarbeiterInschichtViewModel.MitarbeiterInschichtViewModel>
 
-@{
-    ViewBag.Title = "IndexMEBA";
+<section class="content container-fluid">
+    <div class="box-header with-border">
+        <div class="box box-info">
+            <div class="box-header with-border">
+                <h3>MEBA: Übersicht der Mitarbeiter in Schichten</h3>
+
+                <div class="col-lg-12" style="padding-bottom: 25px;">
+                    <div class="col-md-2">
+                        <label>Einträge von:</label>
+                        <input class="form-control text-box single-line" id="min" name="Datum" type="date">
+                    </div>
+                    <div class="mt-2 col-md-2">
+                        <label>Einträge bis:</label>
+
+                        <input class="form-control text-box single-line" id="max" name="Datum" type="date">
+                    </div>
+                </div>
+
+                <table id="myTable" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Datum)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Art)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Anlage)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Personalnummer)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Kostenstelle)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.SAPAPNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.ZeichenNr)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Stück)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.DirStunden)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.InDirStunden)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Bemerkung)
+                            </th>
+
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Datum)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Art)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Anlage)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Personalnummer)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Stück)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.InDirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bemerkung)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+                <img id="btnExport" class="pull-left btn btn-default" onclick="fnExcelReport();" src="~/Content/dist/img/excel_icon.png" />
+                @Html.ActionLink("Neue Zeiterfassung hinzufügen", "CreateMEBA", null, new { @class = "pull-right btn btn-default", @type = "button", })
+            </div>
+        </div>
+    </div>
+</section>
+<iframe id="txtArea1" style="display: none"></iframe>
+
+@section scripts{
+    @Styles.Render("~/bundles/tableStyleBundle")
+    @Scripts.Render("~/bundles/tableScriptBundle")
+
+
+    <script>
+        function addDays(date, days) {
+            var result = new Date(date);
+            result.setDate(result.getDate() + days);
+            return result;
+        }
+        /*
+        Date.prototype.toShortFormat = function () {
+
+            var month_names = ["Jan", "Feb", "Mar",
+                "Apr", "May", "Jun",
+                "Jul", "Aug", "Sep",
+                "Oct", "Nov", "Dec"];
+
+            var day = this.getDate();
+            var month_index = this.getMonth();
+            var year = this.getFullYear();
+
+            return "" + day + "-" + month_names[month_index] + "-" + year;
+        }
+        */
+
+        // Now any Date object can be declared
+        var today = new Date();
+
+        /* Custom filtering function which will search data in column four between two values */
+
+
+
+        jQuery.fn.dataTableExt.afnFiltering.push(
+            function (oSettings, aData, iDataIndex) {
+                var iColumn = 0;
+
+                // document.getElementById('min').value = today; //z.B. 'Thu Jan 16 2020 17:31:26 GMT+0100 (W. Europe Standard Time)'
+                //document.getElementById('max').value = today;
+
+
+                var iMin = Date.parse(document.getElementById('min').value);
+                var iMax = Date.parse(document.getElementById('max').value);
+
+
+                var iVersion = (aData[iColumn] == "-" ? 0 : aData[iColumn]).substring(0, 9);
+                iVersion = Date.parse(iVersion);
+
+
+                /*
+                if (iMin === "" && iMax === "") {
+                    return true;
+                }
+                else if (iMin === "" && iVersion <= iMax) {
+                    return true;
+                }
+                else if (iMin <= iVersion && "" === iMax) {
+                    return true;
+                }
+
+                if (iMin <= iVersion && iVersion <= iMax) {
+                    return true;
+                }
+                return false;
+                */
+
+                if (iMin > addDays(iVersion, 1) || iVersion > iMax) {
+                    return false;
+                }
+                else return true;
+            }
+        );
+
+
+        $(document).ready(function () {
+
+            console.log(document.getElementById('min').value);
+            //document.getElementById('min').value = '15-Jan-2020';
+
+
+            var table = $('#myTable').DataTable();
+
+            $('#min, #max').change(function () {
+                table.draw();
+            });
+
+
+
+        });
+
+
+        function fnExcelReport() {
+            var tab_text = "<table border='2px'><tr bgcolor='#87AFC6'>";
+            var textRange; var j = 0;
+            tab = document.getElementById('myTable'); // id of table
+
+            for (j = 0; j < tab.rows.length; j++) {
+                tab_text = tab_text + tab.rows[j].innerHTML + "</tr>";
+                //tab_text=tab_text+"</tr>";
+            }
+
+            tab_text = tab_text + "</table>";
+            tab_text = tab_text.replace(/<A[^>]*>|<\/A>/g, "");//remove if u want links in your table
+            tab_text = tab_text.replace(/<img[^>]*>/gi, ""); // remove if u want images in your table
+            tab_text = tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); // removes input params
+
+            var ua = window.navigator.userAgent;
+            var msie = ua.indexOf("MSIE ");
+
+            if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))      // If Internet Explorer
+            {
+                txtArea1.document.open("txt/html", "replace");
+                txtArea1.document.write(tab_text);
+                txtArea1.document.close();
+                txtArea1.focus();
+                sa = txtArea1.document.execCommand("SaveAs", true, "TabelleExport.xls");
+            }
+            else                 //other browser not tested on IE 11
+                sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));
+            return (sa);
+        }
+
+
+    </script>
+
+
 }
 
-<h2>IndexMEBA</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Datum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Art)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Anlage)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Personalnummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Kostenstelle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SAPAPNr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ZeichenNr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Stück)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DirStunden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InDirStunden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bemerkung)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Datum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Art)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Anlage)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Personalnummer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Kostenstelle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SAPAPNr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ZeichenNr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Stück)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DirStunden)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InDirStunden)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bemerkung)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
-
-</table>
