--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -24,7 +24,6 @@
                     <h3>
                         @ViewBag.MitarbeiterAnzahl
                     </h3>
-
                     <p>Mitarbeiter</p>
                 </div>
                 <div class="icon">
@@ -74,7 +73,7 @@
             <div class="small-box bg-red">
                 <div class="inner">
                     <h3> @ViewBag.Zeiterfassungen</h3>
-                    
+
                     <p>Zeiterfassungen</p>
                 </div>
                 <div class="icon">
@@ -84,8 +83,53 @@
             </div>
         </div>
         <!-- ./col -->
+        <div class="col-lg-3 col-xs-6">
+            <div class="box-footer text-black">
+                <h4>Produktivität</h4>
 
+                <div class="row">
+                    <div class="col-sm-6">
+                        <!-- Progress bars -->
+                        <div class="clearfix">
+                            <span class="pull-left">Band #1</span>
+                            <small class="pull-right">90%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 90%;"></div>
+                        </div>
 
-    </div>
+                        <div class="clearfix">
+                            <span class="pull-left">Band #2</span>
+                            <small class="pull-right">70%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-sm-6">
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band #3</span>
+                            <small class="pull-right">60%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 60%;"></div>
+                        </div>
+
+                        <div class="clearfix">
+                            <span class="pull-left">Band #4</span>
+                            <small class="pull-right">40%</small>
+                        </div>
+                        <div class="progress xs">
+                            <div class="progress-bar progress-bar-green" style="width: 40%;"></div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                </div>
+            </div>
+            </div>
+
+        </div>
 </section>
 
